i added all changes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section id="about" class="info-section">
         <h2>About Us</h2>
-        <p>Our college is dedicated to providing quality education and fostering a positive learning environment.please do check out.</p>
+        <p>Our college is dedicated to providing quality education and fostering a positive learning environment.please do checkand follow the page.</p>
 
     </section>
 
